--- a/documentation/todo.txt
+++ b/documentation/todo.txt
@@ -1,2 +1,11 @@
 Add subclass parsing for TTL structure (Variable Hierarchy)
 Non Linear Structure (Multiple previous and next steps, no step number)
+
+######
+
+Finish quick version of PQ analyzer
+Load modular ontologies (Later)
+
+######
+
+
